--- a/index.html
+++ b/index.html
@@ -1,45 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Holydays</title>
+  <style>
+    h1,
+    h2,
+    h3,
+    h4 {
+      text-align: center;
+    }
+
+    .custom-restricted-width {
+      /* To limit the menu width to the content of the menu: */
+      display: inline-block;
+      /* Or set the width explicitly: */
+      /* width: 10em; */
+    }
+
+    .pricing-table-list {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    .pricing-table-list li {
+      padding: 0.8em 0;
+      background: #f7f7f7;
+      border-bottom: 1px solid #e7e7e7;
+    }
+  </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css"
+    integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/grids-responsive-min.css">
 </head>
+
 <body>
-  <h1>Holydays</h1>
-  <form id="holyday_new">
-    <div>
-      <label>Name: </label>
-      <input type="text" id="name">
-    </div>   
-    <div>
-      <label>Price: </label>
-      <input type="number" id="price">
-    </div>
-    <div>
-      <label>Country: </label>
-      <input type="text" id="country">
-    </div>
-    <div>
-      <label>Description: </label>
-      <textarea type="text" id="description"></textarea>
-    </div>
-    <button type="submit">Add Holyday</button>
-  </form>
-  
-  <div id="holydays_list">
-    <h2>Holydays List</h2>
-    <ul>
+  <div class="pure-g">
+    <div class="pure-u-1-3">
+      <div class="splash-container">
+        <div class="splash">
+          <h1 class="splash-head">Holydays</h1>
+        </div>
+      </div>
+      <form id="holyday_new" class="pure-form pure-form-aligned">
+        <fieldset>
+          <div class="pure-control-group">
+            <label for="aligned-name">Name: </label>
+            <input type="text" id="name" placeholder="Name" required="" />
+          </div>
+          <div class="pure-control-group">
+            <label for="aligned-price">Price: </label>
+            <input type="number" id="price" placeholder="Price" required="" />
+          </div>
+          <div class="pure-control-group">
+            <label for="aligned-country">Country: </label>
+            <input type="text" id="country" placeholder="Country" required="" />
+          </div>
+          <div class="pure-control-group">
+            <label for="aligned-description">Description: </label>
+            <textarea id="description" placeholder="Description" required=""></textarea>
+          </div>
+          <div class="pure-controls">
+            <button type="submit" class="pure-button pure-button-primary">Add Holyday</button>
+          </div>
+        </fieldset>
+      </form>
 
-    </ul>
-  </div>
-  
-  <div id="holyday_detail_container">
-    <h2>Holyday Detail</h2>
-    <div id="holyday_detail"></div>
-  </div>
+      <div>
+        <div class="splash-container">
+          <div class="splash" style="text-align: center;">
+            <!-- <h2 class="splash-head">Holydays List</h2> -->
+            <div class="pure-menu custom-restricted-width">
+              <span class="pure-menu-heading">
+                <h2>Holydays List</h2>
+              </span>
+              <ul id="holydays_list" class="pure-menu-list"></ul>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <div id="holyday_detail_container">
+        <div class="splash-container">
+          <div class="splash" style="text-align: center;">
+            <div class="pure-menu custom-restricted-width">
+              <span class="pure-menu-heading">
+                <h2>Holyday Detail</h2>
+              </span>
+              <ul id="holyday_detail" class="pricing-table-list"></ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br>
+    </div>
+
+    <div class="pure-u-1-3">
+    </div>
+    <div class="pure-u-1-3">
+    </div>
+  </div>
   <script type="module" src="./www/app.js"></script>
 </body>
+
 </html>
