--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Holydays</title>
+  <title>holidays</title>
   <style>
     h1,
     h2,
@@ -44,10 +44,10 @@
     <div class="pure-u-1-3">
       <div class="splash-container">
         <div class="splash">
-          <h1 class="splash-head">Holydays</h1>
+          <h1 class="splash-head">Holidays</h1>
         </div>
       </div>
-      <form id="holyday_new" class="pure-form pure-form-aligned">
+      <form id="holiday_new" class="pure-form pure-form-aligned">
         <fieldset>
           <div class="pure-control-group">
             <label for="aligned-name">Name: </label>
@@ -66,7 +66,7 @@
             <textarea id="description" placeholder="Description" required=""></textarea>
           </div>
           <div class="pure-controls">
-            <button type="submit" class="pure-button pure-button-primary">Add Holyday</button>
+            <button type="submit" class="pure-button pure-button-primary">Add holiday</button>
           </div>
         </fieldset>
       </form>
@@ -76,22 +76,22 @@
           <div class="splash" style="text-align: center;">
             <div class="pure-menu custom-restricted-width">
               <span class="pure-menu-heading">
-                <h2>Holydays List</h2>
+                <h2>holidays List</h2>
               </span>
-              <ul id="holydays_list" class="pure-menu-list"></ul>
+              <ul id="holidays_list" class="pure-menu-list"></ul>
             </div>
           </div>
         </div>
       </div>
 
-      <div id="holyday_detail_container">
+      <div id="holiday_detail_container">
         <div class="splash-container">
           <div class="splash" style="text-align: center;">
             <div class="pure-menu custom-restricted-width">
               <span class="pure-menu-heading">
-                <h2>Holyday Detail</h2>
+                <h2>holiday Detail</h2>
               </span>
-              <ul id="holyday_detail" class="pricing-table-list"></ul>
+              <ul id="holiday_detail" class="pricing-table-list"></ul>
             </div>
           </div>
         </div>
